--- a/repos.conf/eselect-repo.conf
+++ b/repos.conf/eselect-repo.conf
@@ -20,3 +20,8 @@ location = /var/db/repos/edgets
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/edgets.git
 
+
+[wayland-desktop]
+location = /var/db/repos/wayland-desktop
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/wayland-desktop.git
