update: addded dotnet repo

--- a/repos.conf/eselect-repo.conf
+++ b/repos.conf/eselect-repo.conf
@@ -25,3 +25,8 @@ sync-uri = https://github.com/gentoo-mirror/edgets.git
 location = /var/db/repos/wayland-desktop
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/wayland-desktop.git
+
+[dotnet]
+location = /var/db/repos/dotnet
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/dotnet.git
