update: added librewolf repo

--- a/repos.conf/eselect-repo.conf
+++ b/repos.conf/eselect-repo.conf
@@ -30,3 +30,8 @@ sync-uri = https://github.com/gentoo-mirror/wayland-desktop.git
 location = /var/db/repos/dotnet
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/dotnet.git
+
+[librewolf]
+location = /var/db/repos/librewolf
+sync-type = git
+sync-uri = https://gitlab.com/librewolf-community/browser/gentoo.git
