update: added kdenlive to package.use and cleaned up use flags

--- a/make.conf
+++ b/make.conf
@@ -15,7 +15,7 @@ ABI_X86="64" # builds all applications with only 64 bit support unless i specify
 ACCEPT_KEYWORDS="~amd64" # enables package ebuilds that are not considered 'production-ready'
 GRUB_PLATFORMS="efi-64" # grub is the bootloader i use and my system is 64bit
 
-USE="X alsa pulseaudio vulkan -wayland -nouveau -systemd -kde -gnome -jack -gpm -cups -gtk -qt -pipewire -accessibility -calendar -emacs -examples -gui -bindist -networkmanager"
+USE="X alsa pulseaudio vulkan -bindist -wayland -nouveau -networkmanager -systemd -kde -gnome -jack -pipewire -gtk -qt -gui"
 
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
